Exportdata/main/default/objects/Renter_Information__c/Renter_Information__c.object-meta.xml
<CustomObject>
    <label>Renter Information</label>
    <nameField>
        <label>Renter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renter Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>