Exportdata/main/default/objects/Renter_Information__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <label>Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Higher Values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>