Exportdata/main/default/objects/Renter_Information__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>CustomerInfo__c</referenceTo>
    <relationshipLabel>Renter Informations</relationshipLabel>
    <relationshipName>Renter_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>