Exportdata/main/default/objects/Renter_Information__c/fields/Rental_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Rental_Unit_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Unit Name</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Renter Informations</relationshipLabel>
    <relationshipName>Renter_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>